--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,20 @@ spring:
   data:
     elasticsearch:
       cluster-nodes: http://localhost:9200
+  redis:
+    host: 127.0.0.1
+    timeout: 3000
+    port: 6379
+    database: 0
+    jedis:
+      pool:
+        max-active: 8 # 连接池最大连接数（使用负值表示没有限制）
+        max-idle: 8   # 连接池中的最大空闲连接
+        max-wait: -1  # 连接池最大阻塞等待时间（使用负值表示没有限制)
+        min-idle: 0   # 连接池中的最小空闲连接
 logging:
   pattern:
     console: '%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr([%X{traceId}]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx'
+
+
 
